# julia-set-openMPI

./: .gitignore  CMakeLists.txt  README.md  bitmap.c  bitmap.h  julia_mpi_dynamic.c  julia_mpi_static.c  julia_serial.c  mpi_type.c  mpi_type.h
